--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -651,6 +651,6 @@
         <image name="more_filled" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dek-FT-YOr"/>
+        <segue reference="KQh-Hp-CON"/>
     </inferredMetricsTieBreakers>
 </document>
