level vc for 5 and 6

--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -108,10 +108,10 @@
             </objects>
             <point key="canvasLocation" x="1551" y="2443"/>
         </scene>
-        <!--GeoDDR Level View Controller-->
+        <!--Wait Level View Controller-->
         <scene sceneID="tFR-ou-j3U">
             <objects>
-                <viewController storyboardIdentifier="GeoDDRVC" id="EdB-94-Zlf" customClass="GeoDDRLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WaitVC" id="EdB-94-Zlf" customClass="WaitLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qds-vC-mdS"/>
                         <viewControllerLayoutGuide type="bottom" id="EIN-GS-hke"/>
@@ -122,12 +122,54 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="mXM-se-bXz" kind="show" identifier="GeoDDRComplete" id="dek-FT-YOr"/>
+                        <segue destination="mXM-se-bXz" kind="show" identifier="WaitComplete" id="dek-FT-YOr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jea-ne-11V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1551" y="3158"/>
+        </scene>
+        <!--GeoDDR Level View Controller-->
+        <scene sceneID="WEG-Wa-cwK">
+            <objects>
+                <viewController storyboardIdentifier="GeoDDRVC" id="Ekf-ph-Ykf" customClass="GeoDDRLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5o8-8z-Lg6"/>
+                        <viewControllerLayoutGuide type="bottom" id="MHo-mR-1j6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pnm-2U-1G2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="mXM-se-bXz" kind="show" identifier="GeoDDRComplete" id="q9r-UQ-Ff8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I1H-9x-MPg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1551" y="3856"/>
+        </scene>
+        <!--Mic Level View Controller-->
+        <scene sceneID="skJ-ka-ge1">
+            <objects>
+                <viewController storyboardIdentifier="MicVC" id="01v-jD-uqz" customClass="MicLevelViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GfT-fh-1Ha"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wmf-f1-xTu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OFh-Rc-38S">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="mXM-se-bXz" kind="show" identifier="MicComplete" id="rPo-Od-Ne7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AkB-IG-QLC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1551" y="4592"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XAE-JQ-y1Q">
@@ -319,6 +361,8 @@
                         <segue destination="cjl-pC-x5L" kind="show" id="3l9-JH-Vi7"/>
                         <segue destination="lXw-5a-cOg" kind="show" id="LVm-HY-zWW"/>
                         <segue destination="EdB-94-Zlf" kind="show" id="1eE-qh-447"/>
+                        <segue destination="Ekf-ph-Ykf" kind="show" id="ALV-aA-nN9"/>
+                        <segue destination="01v-jD-uqz" kind="show" id="20A-vB-xDy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wXm-rQ-VKl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -417,7 +461,7 @@
                                         <rect key="frame" x="0.0" y="1" width="600" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zT8-d6-1al" id="TwV-jL-KEb">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="74.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -468,7 +512,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qBK-UM-PiO" id="siU-9N-SdN">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -531,10 +575,10 @@
                             <tableViewSection headerTitle="Display Name" id="Xsa-hO-d3w">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="o0Z-qT-F4r">
-                                        <rect key="frame" x="0.0" y="50" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o0Z-qT-F4r" id="J3B-JI-a4f">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -543,10 +587,10 @@
                             <tableViewSection id="6hs-8j-DQ9">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="wnl-SY-sLG">
-                                        <rect key="frame" x="0.0" y="130" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="129.5" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wnl-SY-sLG" id="fuT-uR-J81">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -651,6 +695,6 @@
         <image name="more_filled" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="KQh-Hp-CON"/>
+        <segue reference="q9r-UQ-Ff8"/>
     </inferredMetricsTieBreakers>
 </document>
